feat(scanner): add StudentInfoDisplay component for displaying student attendance information feat(scanner): update index to export StudentInfoDisplay feat(ui): implement Skeleton component for loading placeholders feat(hooks): create useCreateEventForm hook for managing event creation form state feat(services): implement attendance service for managing student attendance records feat(services): implement event service for CRUD operations on events feat(services): initialize Firebase configuration and Firestore database

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts",
-    "context/auth-context.js"
+    "context/auth-context.js",
+    "lib/firebase.js",
+    "services/event.js"
   ]
 }
